<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="18dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/logoupn"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/logo_upn"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/tv_name_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/text_isi_nama_fakultas"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp" />
            </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="#DAF1DE">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_desc_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="50dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/desc_isi_fakultas"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_short_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="50dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/text_isi_jurusan"
                android:textColor="#E91E63"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/email"
                android:textColor="#4CAF50"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/link_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/yusuf_ardiansyah2807_gmail_com"
                android:textColor="#673AB7"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/website_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/website"
                android:textColor="#03A9F4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_link_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/https_www_google_com"
                android:textColor="#FF9800"
                android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>